# smart-student-task-agent

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  server.py  task.py  task_manager.py  test.txt  test1.txt
app/:  task_manager.py  __init__.py  ai_agent.py  main.py  storage.py
tests/: test_task_manager.py
web/: index.html
